...
import UIKit
import PDFKit

class PDFViewController: UIViewController {
    var path : URL!
    var navTitle: String = ""
    let pdfView = PDFView()
    // Markup Buttons:
    var markupToolsContainer: UIView!
    var textboxButton: UIButton!
    var saveButton: UIBarButtonItem?
    var isTextboxMode = false
    // Markup Draw:
    var currentAnnotation: PDFAnnotation?
    var thumbnailView = PDFThumbnailView()
    var thumbnailToggleButton : UIBarButtonItem!
    
    override func viewDidLoad() {
        // Nav Bar Appearance:
        self.title = navTitle
        isModalInPresentation = true
        navigationController?.navigationBar.tintColor = UIColor(red: 0.61, green: 0.35, blue: 0.71, alpha: 1.00)
        navigationController?.navigationBar.titleTextAttributes = [.foregroundColor: UIColor(red: 0.61, green: 0.53, blue: 1.00, alpha: 1.00)]
        // Nav Bar Buttons
        let doneButton = UIBarButtonItem(title: "Done", style: .plain, target: self, action: #selector(doneTapped))
        doneButton.accessibilityIdentifier = "Done"
        
        let shareButton = UIBarButtonItem(barButtonSystemItem: .action, target: self, action: #selector(shareTapped))
        shareButton.accessibilityIdentifier = "Share"
        thumbnailToggleButton = UIBarButtonItem(image: UIImage(systemName: "list.bullet.circle"), style: .plain, target: self, action: #selector(toggleThumbnailView))
        thumbnailToggleButton.accessibilityIdentifier = "toggleThumbnailView"
        self.navigationItem.leftBarButtonItems = [doneButton, thumbnailToggleButton]
        // Set up PDFView and Thumbnail View
        // Initialize the thumbnail view
        thumbnailView = PDFThumbnailView(frame: .zero)
        // Associate it with the PDFView
        thumbnailView.pdfView = pdfView
...
        swipeRight.direction = .right
        swipeRight.cancelsTouchesInView = false
        pdfView.addGestureRecognizer(swipeRight)
        
        //Markup:
        let markupButton = UIBarButtonItem(image: UIImage(systemName: "pencil.tip.crop.circle"), style: .plain, target: self, action: #selector(toggleMarkupTools))
        markupButton.accessibilityIdentifier = "markup"
        navigationItem.rightBarButtonItems = [markupButton, shareButton]
        NotificationCenter.default.addObserver(self, selector: #selector(documentChanged(_:)), name: Notification.Name.PDFViewDocumentChanged, object: nil)
        
        setupMarkupTools()
    }
    
...
        markupToolsContainer.layer.cornerRadius = 15
        markupToolsContainer.isHidden = true
        view.addSubview(markupToolsContainer)
        
        // Buttons setup
        textboxButton = UIButton(type: .system)
        textboxButton.accessibilityIdentifier = "textBoxButton"
        textboxButton.setImage(UIImage(systemName: "character.textbox"), for: .normal)
        textboxButton.tintColor = UIColor(red: 0.61, green: 0.35, blue: 0.71, alpha: 1.00)
        textboxButton.addTarget(self, action: #selector(textboxModeActivated), for: .touchUpInside)
        
        
        // Stack view for horizontal layout
...
        addSaveButton()
    }
    
    @objc func saveChanges() {
        if let document = pdfView.document, let documentURL = document.documentURL {
            document.write(to: documentURL)
            let alert = UIAlertController(title: "Saved", message: "Your changes have been saved.", preferredStyle: .alert)
            alert.addAction(UIAlertAction(title: "OK", style: .default))
            present(alert, animated: true)
        }
        saveButton?.isHidden = true
        saveButton = nil
    }
    
...
            return
        }
        let locationInView = recognizer.location(in: pdfView)
        let locationOnPage = pdfView.convert(locationInView, to: page)
        
        // Show dialog to get text
        let alertController = UIAlertController(title: "Enter Text", message: nil, preferredStyle: .alert)
        alertController.addTextField()
        alertController.addAction(UIAlertAction(title: "Cancel", style: .cancel))
        alertController.addAction(UIAlertAction(title: "Add", style: .default) { _ in
            if let text = alertController.textFields?.first?.text {
                // Getting the width and height of annoted text:
                let attributes: [NSAttributedString.Key: Any] = [.font: UIFont.systemFont(ofSize: 70)]
                let attributedString = NSAttributedString(string: text, attributes: attributes)
                let stringSize = attributedString.size()
                let annotation = PDFAnnotation(bounds: CGRect(origin: locationOnPage, size: CGSize(width: stringSize.width, height: stringSize.height)), forType: .freeText, withProperties: nil)
...
        })
        present(alertController, animated: true)
    }
    //MARK: - Save Button Logic:
    func addSaveButton() {
        if saveButton == nil {
            saveButton = UIBarButtonItem(title: "Save", style: .plain, target: self, action: #selector(saveChanges))
            saveButton!.tintColor = UIColor(red: 0.61, green: 0.35, blue: 0.71, alpha: 1.00)
            navigationItem.rightBarButtonItems?.append(saveButton!)
        }
    }
}

