...
    var folderIndex : Int = 0
    var foldersArrayReference : [Folder] = []
    var isInSelectionMode: Bool = false
    // Pre-define merge button
    let mergeButton: UIButton = {
        let button = UIButton(type: .system)
        button.setTitle("Merge", for: .normal)
        button.backgroundColor = UIColor(red: 0.61, green: 0.35, blue: 0.71, alpha: 1.00)
        button.tintColor = UIColor.white
        button.layer.cornerRadius = 25
        button.translatesAutoresizingMaskIntoConstraints = false
        button.addTarget(self, action: #selector(mergeTapped), for: .touchUpInside)
        return button
    }()
    
    override func viewDidLoad() {
        super.viewDidLoad()
        //Nav Bar:
        self.title = foldersArrayReference[folderIndex].name
        let scanButton = UIBarButtonItem(title: "New Scan", style: .plain, target: self, action: #selector(scanTapped))
        let doneButton = UIBarButtonItem(title: "Back", style: .plain, target: self, action: #selector(doneTapped))
        self.navigationItem.leftBarButtonItem = doneButton
        let selectButton = UIBarButtonItem(title: "Select", style: .plain, target: self, action: #selector(toggleSelection))
        navigationItem.rightBarButtonItems = [selectButton, scanButton]
        navigationController?.navigationBar.prefersLargeTitles = true
        navigationController?.navigationBar.tintColor = UIColor(red: 0.61, green: 0.35, blue: 0.71, alpha: 1.00)
        navigationController?.navigationBar.largeTitleTextAttributes = [.foregroundColor: UIColor(red: 0.61, green: 0.53, blue: 1.00, alpha: 1.00)]
        view.addSubview(mergeButton)
        NSLayoutConstraint.activate([
...
        documentCollectionView.register(UINib(nibName: "DocumentCollectionViewCell", bundle: nil), forCellWithReuseIdentifier: "DocumentCollectionViewCell")
        
        // Delegates:
        documentCollectionView.dataSource = self
        documentCollectionView.delegate = self
        setNamingConventionTextField.delegate = self
        documentCollectionView.accessibilityIdentifier = "docCV"
        // Update:
        foldersArrayReference = FolderManager.shared.loadFolders()
        cleanupCorruptedFiles()
        documentCollectionView.reloadData()
    }
    
...
        documentCollectionView.reloadData()
    }
    
    //MARK: - NavigationBar Items:
    @objc func scanTapped() {
        let scannerViewController = VNDocumentCameraViewController()
        scannerViewController.view.accessibilityIdentifier = "vnDocCam"
        scannerViewController.delegate = self
        present(scannerViewController, animated: true)
    }
    
    @objc func doneTapped() {
        // Dismiss the FolderViewController
...
    }
    
    //MARK: - Two-Page Mode:
    
    @IBAction func twoPageModeToggled(_ sender: UISwitch) {
        if sender.isOn {
            let alertController = UIAlertController(title: "Page Count", message: "How many pages will you be scanning?", preferredStyle: .alert)
            alertController.addTextField { (textField) in
                textField.placeholder = "Number of pages"
                textField.keyboardType = .numberPad
            }
            
            let saveAction = UIAlertAction(title: "Save", style: .default) { [weak self] _ in
...
            return false
        }
    }
    
    //MARK: - Rename Feature:
    func renameDocument(at indexPath: IndexPath) {
        let alertController = UIAlertController(title: "Rename Document", message: "Provide a new name for the document:", preferredStyle: .alert)
        alertController.addTextField { (textField) in
            textField.placeholder = "New name"
            textField.text = self.foldersArrayReference[self.folderIndex].documentPaths[indexPath.item] // Current name
        }
        
        let saveAction = UIAlertAction(title: "Save", style: .default) { [weak self] _ in
...
        let collectionViewSize = collectionView.frame.size.width - (padding*3)
        return CGSize(width: collectionViewSize/2, height: collectionViewSize/2)  // Adjust height as needed
    }
    
    func collectionView(_ collectionView: UICollectionView, contextMenuConfigurationForItemAt indexPath: IndexPath, point: CGPoint) -> UIContextMenuConfiguration? {
        return UIContextMenuConfiguration(identifier: nil, previewProvider: nil) { _ in
            let deleteAction = UIAction(title: "Delete", image: UIImage(systemName: "trash"), attributes: .destructive) { [weak self] _ in
                self?.deleteDocument(at: indexPath)
            }
            let renameAction = UIAction(title: "Rename", image: UIImage(systemName: "pencil")) { [weak self] _ in
                self?.renameDocument(at: indexPath)
            }
            return UIMenu(title: "", children: [renameAction, deleteAction])
        }
    }
    func collectionView(_ collectionView: UICollectionView, didSelectItemAt indexPath: IndexPath) {
...
            let image = scan.imageOfPage(at: i)
            scannedImages.append(image) //Append scanned images to array.
        }
        if twoPageModeSwitch.isOn {
            scannedImages = processScannedImages(scannedImages)
        }
        let alertController = UIAlertController(title: "File Name", message: "Please provide a name for the document:", preferredStyle: .alert)
        alertController.addTextField { (textField) in
            let folderName = self.foldersArrayReference[self.folderIndex].name
            if let namingConvention = self.getNamingConvention(forFolder: folderName), !namingConvention.isEmpty {
                textField.text = self.generateFileName(forFolder: folderName) // Use the naming convention with a unique identifier
            } else {
                textField.placeholder = "File name" // Default placeholder if no naming convention is set
...
