...
        super.viewDidLoad()
        foldersCollectionView.register(UINib(nibName: "FolderCollectionViewCell", bundle: nil), forCellWithReuseIdentifier: "FolderCell")
        self.navBar.prefersLargeTitles = true
        foldersArray = FolderManager.shared.loadFolders()
        foldersCollectionView.dataSource = self
        foldersCollectionView.delegate = self
        foldersCollectionView.accessibilityIdentifier = "folderCV"
    }
    //new:
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
        foldersArray = FolderManager.shared.loadFolders()
        // Load the foldersArray from persistent storage
...
        navBar.largeTitleTextAttributes = [.foregroundColor: UIColor(red: 0.61, green: 0.53, blue: 1.00, alpha: 1.00)]
        navBar.tintColor = UIColor(red: 0.61, green: 0.35, blue: 0.71, alpha: 1.00)
    }
    
    @IBAction func addFolderTapped(_ sender: UIBarButtonItem) {
        // Create an alert
        let alertController = UIAlertController(title: "New Folder", message: "Enter a name for this folder.", preferredStyle: .alert)
        
        // Add a text field to the alert for the folder name
        alertController.addTextField { textField in
            textField.placeholder = "Folder Name"
        }
        
...
        // Update the collection view
        foldersCollectionView.deleteItems(at: [indexPath])
    }
    
    func renameFolder(at indexPath: IndexPath) {
        let oldFolderName = foldersArray[indexPath.item].name
        let alertController = UIAlertController(title: "Rename Folder", message: "Enter a new name for this folder.", preferredStyle: .alert)
        
        alertController.addTextField { textField in
            textField.text = oldFolderName
        }
        
        let renameAction = UIAlertAction(title: "Rename", style: .default) { [weak self] _ in
...
