...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.60784313729999995" green="0.34901960780000002" blue="0.71372549019999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Not Set" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QSd-UX-G8S">
                                <rect key="frame" x="178" y="118" width="199" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="NamingConventionTextField"/>
                                <color key="textColor" red="0.60784313729999995" green="0.34901960780000002" blue="0.71372549019999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <switch toolTip="Two-Page Mode" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZGD-KZ-FUv">
                                <rect key="frame" x="178" y="79" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="TwoPageModeToggle"/>
                                <color key="onTintColor" red="0.60000002379999995" green="0.53725492949999998" blue="0.97254902119999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <color key="thumbTintColor" red="0.60784313725490191" green="0.34901960784313724" blue="0.71372549019607845" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <connections>
                                    <action selector="twoPageModeToggled:" destination="BYZ-38-t0r" eventType="valueChanged" id="hKE-Fe-Zwt"/>
                                </connections>
                            </switch>
...
                                </cells>
                            </collectionView>
                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t1b-EM-Y6a">
                                <rect key="frame" x="0.0" y="46" width="394" height="44"/>
                                <items>
                                    <navigationItem title="Home" id="aLZ-MK-UdM">
                                        <barButtonItem key="rightBarButtonItem" title="Add Folder" id="MvL-zd-7Bj">
                                            <connections>
                                                <action selector="addFolderTapped:" destination="lUf-I3-qki" id="uWK-Pp-uNO"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
                                </items>
...
